tests/rosetta/transpiler/FS/aliquot-sequence-classifications.error
compile: exit status 1
F# Compiler for F# 4.0 (Open Source Edition)
Freely distributed under the Apache 2.0 Open Source License

/workspace/mochi/tests/rosetta/transpiler/FS/aliquot-sequence-classifications.fs(5,22): error FS1147: This number is outside the allowable range for 32-bit signed integers

/workspace/mochi/tests/rosetta/transpiler/FS/aliquot-sequence-classifications.fs(185,24): error FS1147: This number is outside the allowable range for 32-bit signed integers

/workspace/mochi/tests/rosetta/transpiler/FS/aliquot-sequence-classifications.fs(3,1): warning FS0221: The declarations in this file will be placed in an implicit module 'Aliquot-sequence-classifications' based on the file name 'aliquot-sequence-classifications.fs'. However this is not a valid F# identifier, so the contents will not be accessible from other files. Consider renaming the file or adding a 'module' or 'namespace' declaration at the top of the file.
